# qabook

./: .gitignore  README.md  pyproject.toml  webui.py
core/: embeddings.py  rag_chain.py  retriever.py  text_splitter.py  utils.py
crawler/: items.py  middlewares.py  pipelines.py  settings.py
example/: 9787115592316.epub  reader.py
tests/: test_embeddings.py  test_rag.py  test_reader.py  test_text_splitter.py
vector-store/deepseek-r1/: index.faiss  index.pkl
